# rust-svg

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  utils.rs
src/art_forms/: mod.rs
src/art_forms/base_shapes/: base_shapes_impl.rs  base_shapes_trait.rs  mod.rs  test_base_shapes.rs
src/art_forms/leaves/: leaves_impl.rs  leaves_trait.rs  mod.rs  test_leaves.rs
src/art_forms/yantra/: mod.rs  sri_yantra_geometry.rs  test_yantra.rs  unit_tests.rs  yantra_impl.rs  yantra_trait.rs
src/canvas/: canvas.rs
tests/: sri_yantra.rs
