[package]
name = "svg-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.0"
geo = "0.23.1"
geo-types = "0.7.8"
derive-getters = "0.2.0"
derive-new = "0.5"
num = "0.4.0"
numeric_literals = "0.2.0"